update swagger and security config